tdf#109304: Seems infobar child window wasn't registered in Math

thus no signature status infobar appeared (I wonder if read-only
bar ever worked too)

Change-Id: I8829b2b6a17fb8d38e3ea79b87d544e3fb29f1c1
Reviewed-on: https://gerrit.libreoffice.org/40377
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>